setting page-Langauage dropdown not showing issue fixed

--- a/nextmagentacloud21/core/css/settings.css
+++ b/nextmagentacloud21/core/css/settings.css
@@ -59,7 +59,7 @@
     font-family: TeleNeoWeb, TeleNeo, sans-serif;
   }
 
-  select#languageinput{
+  select#language{
     width: 400px ;
     height:48px !important;
     padding:0.75rem 0.75rem 0.75rem 0.688rem;
